# adempiere_backend_rs

./: .env  Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml  release.yaml
docker/: Dockerfile
docker-compose/: .env  docker-compose.yml
proto/service/: middleware.proto
src/: client.rs  lib.rs
src/models/: documents.rs  mod.rs
