[package]
name = "adempiere_backend_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
local-ip-address = "0.5.1"
dotenv = "0.15.0"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.91"
salvo = "=0.37.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.17"
simple_logger = "3.0.0"
#jwt = "0.16.0"
#sha2 = "0.10.6"
#hmac = "0.12.1"
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.8"